# markhub

./: .gitignore  BACKLOG.md  CLAUDE.md  JOURNAL.md  MIGRATION-NOTES.md  OBSERVER-NOTES.md  PAPER-TOKENS.md  PLAN-AI-READY.md  PLAN-BLOCKNOTE.md  PLAN-CLI.md  PLAN-FRONTMATTER-UI.md  PLAN-LIGHT-THEMES.md  PLAN-REFACTOR.md  PLAN-THEMING.md  PLAN-UI-PAPER.md  PLAN-UI-PENCIL.md  PLAN.md  README.md  SPEC.md  STATE.md  TESTS.md  WORKPLAN.md  package-lock.json  package.json  playwright.config.ts  svelte.config.js  vite.config.ts
features/: PLAN-AI-AGENT.md  PLAN-BLOCKNOTE.md  empty-state.md  sommaire.md
plan-110526/: DESIGN-PRINCIPLES.md  PLAN-BLOCKNOTE.md  PLAN-COMMAND-SYSTEM.md  PLAN-DESIGN-DEFAULTS.md  PLAN-SETTINGS.md
src/: app.css  app.html
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs  migration.rs  models.rs
src-tauri/src/commands/: config.rs  export.rs  files.rs  frontmatter_state.rs  mod.rs  search.rs  settings.rs  vaults.rs
src/routes/: +layout.svelte  +page.svelte
tests/: setup.ts
tests/component/: BlockNoteFormattingToolbar.test.svelte.ts  BlockNoteLinkToolbar.test.svelte.ts  BlockNoteSideMenu.test.svelte.ts  BlockNoteTableHandles.test.svelte.ts  CommandMode.test.svelte.ts  CommandPalette.test.svelte.ts  Editor.test.svelte.ts  EditorToolbar.test.svelte.ts  EmptyState.test.svelte.ts  FileMode.test.svelte.ts  FileTree.test.svelte.ts  FrontmatterBlock.test.svelte.ts  InlineInput.test.svelte.ts  SearchMode.test.svelte.ts  SettingsAppearance.test.svelte.ts  SettingsBehavior.test.svelte.ts  SettingsEditor.test.svelte.ts  (+8 more)
(+160 files in other folders)
